--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
   <url>http://maven.apache.org</url>
 
   <dependencies>
+  <dependency>
+	<groupId>com.oracle.jdbc</groupId>
+	<artifactId>ojdbc7</artifactId>
+	<version>12.1.0.2</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -47,5 +52,17 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+  <distributionManagement>
+	  <repository>
+	  <id>par-maven-artifacts</id>
+	  <url>https://karauctionservices.pkgs.visualstudio.com/PAR/_packaging/par-maven-artifacts/maven/v1</url>
+	  <releases>
+		<enabled>true</enabled>
+	  </releases>
+	  <snapshots>
+		<enabled>true</enabled>
+	  </snapshots>
+	</repository>
+	</distributionManagement>
 	
 </project>
